# bench_hvp

./: .gitignore  README.md  pyproject.toml  setup.cfg
bench_hvp/: bench_hvp_memory.py  bench_hvp_memory.sh  bench_hvp_neural_nets.py  bench_hvp_time.py  bench_resnet.py  bench_tanh.py  main.py  memory_monitor.py  models.py  utils.py  utils_jax.py  utils_torch.py
bench_hvp/config/: slurm.yml
figures/: plot.py  plot_bench_hvp_memory.py  plot_bench_hvp_time.py  plot_bench_memory.py  plot_bench_time.py  plot_resnet_wrt_depth.py  plot_tanh.py
outputs/: bench_hvp.parquet  bench_hvp16.parquet  bench_hvp64.parquet  bench_hvp_time_jax.parquet  bench_hvp_time_torch.parquet  bench_tanh.parquet
