[metadata]
long_description = file: README.md, LICENSE
long_description_content_type = text/x-rst
license = BSD (3-clause)
maintainer = Mathieu Dagreou
maintainer_email = mathieu.dagreou@inria.fr
name = bench_hvp
platforms = any

[options]
packages = find:
install_requires =
    matplotlib
    jax[cuda11_pip]
    pandas
    joblib
    submitit
    rich
    flax
    optax
    psutil
    pyarrow
    memory_profiler


[options.extras_require]
test =
    flake8